overflow bugfix

--- a/css/layout.css
+++ b/css/layout.css
@@ -33,6 +33,11 @@ body {
     font-family: "uni_sans_demoheavy_caps", sans-serif;
     overflow: hidden;
 }
+@media (max-width: 777px){
+    body{
+        overflow: auto;
+    }
+}
 
 .first-row-container {
     padding-top: 20px;
